welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:11: error: not found: value num
			if (num.length>4)
                            ^