welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
	var n:Int=nums.length
	var compteur=0
		if (n>4)
		for (k <- 0 to 4){
			if (9==nums(k)){
				return true
			} 
			
		} else {
			if (num.length>4)
		for (k <- 0 to n){
			if (9==nums(k)){
				return true
			} 
		}
		}
		return false
}
